tests/golden/expected/action_badslot.stdout.txt
Compile error: tests/fixtures/action_badslot.lamp:14: type error: action "take" has no slot "grabbed"
  14 | 		grabbed yourself
    |   ^
